tests/data/fail/lib_utils.pyi
from numpy.lib import array_utils

array_utils.byte_bounds(1)  # E: incompatible type
